--- a/client/donate/donate/index.html
+++ b/client/donate/donate/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>donate</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+  <title>北京校友会捐赠母校95周年校庆名单</title>
+  <style>
+    body,
+    html {
+      position: relative;
+      height: 100%;
+      background: #fff;
+      margin: 0;
+    }
+  </style>
+  <script type="text/javascript">
+    //rem 计算
+    !function () {
+      var docEl = document.documentElement,
+        resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+        recalc = function () {
+          var clientWidth = document.body.scrollWidth;
+          if (!clientWidth) return;
+          docEl.style.fontSize = (100 * (clientWidth / 750) > 55.3333 ? 55.3333 : 100 * (clientWidth / 750)) + 'px';
+        };
+      if (!document.addEventListener) return;
+      window.addEventListener(resizeEvt, recalc, false);
+      document.addEventListener('DOMContentLoaded', recalc, false);
+    }();
+  </script>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
