--- a/client/donate/donate/index.html
+++ b/client/donate/donate/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-  <title>北京校友会捐赠母校95周年校庆名单</title>
+  <title>北京校友会捐赠名单</title>
   <style>
     body,
     html {
