--- a/client/donate/index.html
+++ b/client/donate/index.html
@@ -16,4 +16,15 @@
       if (!document.addEventListener) return;
       window.addEventListener(resizeEvt, recalc, false);
       document.addEventListener('DOMContentLoaded', recalc, false);
-    }();</script><link href=./static/css/app.36c746060001a309e6af1ae43aa4be6e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.2420502e2b2c7f321d64.js></script><script type=text/javascript src=./static/js/app.91eff0c5598faa6d0ed9.js></script></body></html>
+    }();
+
+  	var _mtac = {"performanceMonitor":1,"senseQuery":1};
+  	(function() {
+  		var mta = document.createElement("script");
+  		mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
+  		mta.setAttribute("name", "MTAH5");
+  		mta.setAttribute("sid", "500643112");
+  		mta.setAttribute("cid", "500643127");
+  		var s = document.getElementsByTagName("script")[0];
+  		s.parentNode.insertBefore(mta, s);
+  	})();</script><link href=./static/css/app.01ddafd73d7a08f9965a8b04adc35e1e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.6aa5c6d62c1e520517da.js></script><script type=text/javascript src=./static/js/app.b6df3db3f9e6593e3823.js></script></body></html>
