--- a/client/donate/index.html
+++ b/client/donate/index.html
@@ -16,15 +16,4 @@
       if (!document.addEventListener) return;
       window.addEventListener(resizeEvt, recalc, false);
       document.addEventListener('DOMContentLoaded', recalc, false);
-    }();
-
-  	var _mtac = {"performanceMonitor":1,"senseQuery":1};
-  	(function() {
-  		var mta = document.createElement("script");
-  		mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
-  		mta.setAttribute("name", "MTAH5");
-  		mta.setAttribute("sid", "500643112");
-  		mta.setAttribute("cid", "500643127");
-  		var s = document.getElementsByTagName("script")[0];
-  		s.parentNode.insertBefore(mta, s);
-  	})();</script><link href=./static/css/app.01ddafd73d7a08f9965a8b04adc35e1e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.6aa5c6d62c1e520517da.js></script><script type=text/javascript src=./static/js/app.b6df3db3f9e6593e3823.js></script></body></html>
+    }();</script><link href=./static/css/app.222bddb0715503b15a75de706ebd7a28.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.6aa5c6d62c1e520517da.js></script><script type=text/javascript src=./static/js/app.547097474577bc55f60f.js></script></body></html>
